# wikibase-metadata

./: # EXPECTATION SUITE NOTES.md  .coveragerc  .dockerignore  .env.example  .env.template  .gitignore  .prettierignore  .prettierrc.json  .pylintrc  Dockerfile  LICENSE  Procfile  README.md  Untitled.ipynb  __init__.py  alembic.ini  app.py  check_out_of_date.py  config.py  connectivity_notes.md  connectivity_notes.txt  data-list.md  docker-compose-test.yml  docker-compose.yaml  docker-compose.yml  index.html  local-settings.ini  logger.py  main.py  nginx.conf  package-lock.json  package.json  prod-settings.ini  pull_wikibase_world.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  settings.ini  tailwind.config.js  (+4 more)
alembic/: env.py
backend/: .coveragerc  .dockerignore  .env.template  .gitignore  .prettierignore  .pylintrc  Dockerfile  __init__.py  app.py  config.py  db.Dockerfile  entrypoint.sh  migrate.py  prod-settings.ini  pull_wikibase_world.py  pytest.ini  requirements-dev.txt  requirements.txt  settings.ini  start.sh  test-settings.ini
data/: database_connection.py  great_expectations_cheat_sheet.py  jobs.db  wikibase-data.db  wikibase-test-data.db  wikibase_world_data.json
docs/: data-list.md  data-schedule.md  deployment.md  development.md  metrics_csv.md
export_csv/: __init__.py  metric.py  quantity.py  util.py
fetch_data/: __init__.py  fix_missing_script_path.py  fix_missing_sparql_path.py
frontend/: .dockerignore  .env  .prettierrc.json  App.vue  Dockerfile  README.md  codegen.ts  eslint.config.ts  index.html  main.ts  style.css  (+8 more)
(+1297 files in other folders)
