[project]
name = "wikibase_metadata"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.20.0",
    "alembic>=1.14.1",
    "apscheduler>=3.11.0",
    "beautifulsoup4>=4.12.3",
    "fastapi[standard]>=0.115.7",
    "gunicorn>=23.0.0",
    "httpx>=0.28.1",
    "numpy>=1.26.4,<2.0",
    "requests>=2.32.3",
    "sparqlwrapper>=2.0.0",
    "sqlalchemy[asyncio]>=2.0.37",
    "strawberry-graphql[fastapi]>=0.258.0",
    "tqdm>=4.67.1",
    "uvicorn[standard]>=0.34.0",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "freezegun>=1.5.1",
    "great-expectations>=1.3.3",
    "pylint>=3.3.3",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.2",
    "pytest-cov<6.0.0",
    "pytest-dependency>=0.6.0",
    "pytest-mock>=3.14.0",
    "pytest-order>=1.3.0",
]
